<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drink_CardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    app:cardCornerRadius="8dp"
    app:cardUseCompatPadding="true">

    <ImageView
        android:src="@drawable/card_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:contentDescription="@string/cardView_background"/>

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/drink_imageView"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:contentDescription="@string/drink_image"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/drink_name_TextView"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:textColor="@color/textView_color"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/drink_chosen_ingrs_TextView"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/textView_color"
                    android:textStyle="italic"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/is_drink_liked_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:gravity="top|end">

            <ImageView
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:src="@drawable/heart_pressed"
                android:contentDescription="@string/is_drink_liked"/>

        </LinearLayout>

        <TextView
            android:textSize="10sp"
            android:id="@+id/drink_position"
            android:textColor="@color/textView_color"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:gravity="bottom|end"
            tools:ignore="SmallSp"/>

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>
